# PortalWebInmobiliario

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  consulta_inmuebles_por_comuna_region.py  full_backup.py  genera_json_comunas_regiones.py  genera_json_usuarios.py  inmuebles_backup.py  inmuebles_disponibles_por_region.py  manage.py  pyproject.toml  requirements.txt
.github/workflows/: docker-build-deploy.yml
inmobiliario/: asgi.py  settings.py  urls.py  wsgi.py
requerimientos/hito2/: inmuebles_por_comuna.txt  inmuebles_por_region.txt
staticfiles/js/: arrendador.js
staticfiles/styles/: main.css
webPages/: forms.py  models.py  services.py  urls.py  utils.py  views.py
webPages/fixtures/: backup_inmuebles.json  full_backup.json  inmuebles_adapted.json  regiones_comunas.json  tipos_inmueble.json  usuarios.json  usuarios_datos.json
webPages/migrations/: 0001_initial.py  0002_alter_comuna_unique_together.py  0002_rename_aceptada_solicitud_estado.py  0003_remove_arrendador_usuario_ptr_and_more.py  0003_solicitud_mensaje.py  0004_delete_arrendatario_arrendatario.py  0005_alter_arrendador_options_alter_arrendatario_options_and_more.py  0006_remove_usuario_date_joined_remove_usuario_first_name_and_more.py  0007_remove_inmueble_imagen_inmueble_imagen_url.py
webPages/static/styles/: main.css
webPages/templates/components/: bar.html  detalleInmuebleCard.html  footer.html  inmuebleCard.html  inmuebleCardHome.html  inmuebles_list.html  navBar.html  userAccordeon.html
webPages/templates/layouts/: base.html  secondary.html
webPages/templates/pages/: detalleInmueble.html  home.html  inmuebleForm.html  login.html  panelArrendador.html  panelArrendatario.html  registroDatos.html  (+3 more)
webPages/templatetags/: custom_filters.py
